- Added URL for each video service in "Information" form
- Added embeded checking for updates at startup
- Added the possibility to set a custom conversion configuration on add a new video
- Added sorting for "Downloads log" list (now is sorted from old to new downloads)
- Added possibility to open urls (double click) in "Downloads log" list
- Added Paypal donate button in main window
- Added two new formats to convert:
	- MP4 (*.mp4) format
	- Sony PSP (*.mp4) format

- Fixed bug (Error: when two or more videos failed an exception was generated)
- Fixed bug (Error: iPod mp4 format was not converted, thanks to "Jens Chr. True" for your help)
- Fixed bug (Error: 3gp format was not converted)
- Fixed bug (Error: editing the "Downloads Dir" manually in Main form, on enter a new char the cursor where placed at end of edit)
- Fixed bug (Error: Invlaid file names when the video title contains '/' or '\')
- Fixed bug (Error: Paypal link was corrupt, now the Paypal button links to xVST website donation page)
- Fixed bug (Error: Open downloads directory in tray icon were not opened)

- Updated English language
- Updated Spanish language
- Updated Catalan language
- Updated french language
- Updated ffmpeg lib to last version (0.5)

- Improved internal HTTP class (added connection timeout)
- Improved update center (added download error detection)

- Revised all services:
	- Added HD videos for Youtube
	- Added HD videos for GameSpot
	- Added Tangle.com (before GodTube)
	- Removed Sclipo: Videos are not publics
	- Removed Stage6: Website closed
	- Removed Lulu.tv: Website closed (now is lulu.com and its a shopping site)
	- Removed ZanyVideos: Videos are not publics
	- Removed Zaable: Now is a strange website (videos seems to be privates)
	- Removed Broadcaster: Website closed
	- Removed GodTube: Website changed to Tangle
	- Removed ZippyVideos: Website seems to be down

xUpdater:

- Added new function: echo "msg"